// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Changes state with mouse events 1`] = `
<div
  className="todos-wrapper undefined"
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <button
    className="btn complete-btn"
    onClick={[Function]}
  >
    <div
      className="todo-text-wrapper"
    >
      <i
        className="check-icon"
      />
      <p
        className="todo-text incomplete"
      >
        Go to the supermarket
      </p>
    </div>
  </button>
  <button
    className="btn delete-btn"
    onClick={[Function]}
  >
    <i
      className="delete-icon"
    />
  </button>
</div>
`;

exports[`Changes state with mouse events 2`] = `
<div
  className="todos-wrapper undefined"
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <button
    className="btn complete-btn"
    onClick={[Function]}
  >
    <div
      className="todo-text-wrapper"
    >
      <i
        className="check-icon"
      />
      <p
        className="todo-text incomplete"
      >
        Go to the supermarket
      </p>
    </div>
  </button>
  <button
    className="btn delete-btn"
    onClick={[Function]}
  >
    <i
      className="delete-icon"
    />
  </button>
</div>
`;

exports[`Changes state with mouse events 3`] = `
<div
  className="todos-wrapper undefined"
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <button
    className="btn complete-btn"
    onClick={[Function]}
  >
    <div
      className="todo-text-wrapper"
    >
      <i
        className="check-icon"
      />
      <p
        className="todo-text incomplete"
      >
        Go to the supermarket
      </p>
    </div>
  </button>
  <button
    className="btn delete-btn"
    onClick={[Function]}
  >
    <i
      className="delete-icon fas fa-window-close fa-2x"
    />
  </button>
</div>
`;

exports[`Todo component renders 1`] = `
<div
  className="todos-wrapper undefined"
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <button
    className="btn complete-btn"
    onClick={[Function]}
  >
    <div
      className="todo-text-wrapper"
    >
      <i
        className="check-icon"
      />
      <p
        className="todo-text incomplete"
      >
        Go to the supermarket
      </p>
    </div>
  </button>
  <button
    className="btn delete-btn"
    onClick={[Function]}
  >
    <i
      className="delete-icon"
    />
  </button>
</div>
`;
